fix flex wrap in breadcrums

--- a/src/widgets/breadcrumb/breadcrumb.scss
+++ b/src/widgets/breadcrumb/breadcrumb.scss
@@ -1,5 +1,7 @@
 .breadcrumb {
 	display: flex;
+	flex-wrap: wrap;
+	column-gap: 20px;
 	justify-content: space-between;
 	align-items: center;
 	@include adaptiveValue("padding-top", 36, 24);
